--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,26 @@ android {
   buildTypes {
     release {
       minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      shrinkResources true
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+    debug{
+
     }
   }
 }
 
+def getDate() {
+  def date = new Date()
+  def formattedDate = date.format('yyyy.MM.dd-HH.mm')
+  return formattedDate
+}
+
+ext {
+  supportLibVersion = '23.3.0' // variable that can be referenced to keep support libs consistent
+}
+
+
 dependencies {
-  compile 'com.android.support:appcompat-v7:23.4.0'
+  compile "com.android.support:appcompat-v7:${supportLibVersion}"
 }
