--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=2020
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=2020
+systemProp.http.proxyUser=20speed222870
+systemProp.http.proxyPassword=byebye1
+systemProp.https.proxyUser=20speed222870
+systemProp.https.proxyPassword=byebye1
+
