--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<application
+			android:name=".App"
 			android:allowBackup="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
-			android:supportsRtl="true"
-			android:theme="@style/AppTheme">
-
+			android:supportsRtl="false"
+			android:theme="@style/AppTheme"
+			>
 	</application>
 
 </manifest>
