--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,15 @@
 			android:supportsRtl="false"
 			android:theme="@style/AppTheme"
 			>
+		<activity
+				android:name=".activities.HomeActivity"
+				android:label="Home Activity"
+				>
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
 	</application>
 
 </manifest>
