--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 			>
 		<activity
 				android:name=".activities.HomeActivity"
-				android:label="Home Activity"
+				android:label="@string/app_name"
 				>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
