--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ def dbflow_version = "3.1.1"
 dependencies {
   compile "com.android.support:appcompat-v7:${supportLibVersion}"
   compile "com.android.support:design:${supportLibVersion}"
+  compile "com.android.support:cardview-v7:${supportLibVersion}"
   apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
   compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
   compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
