--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 			android:theme="@style/AppTheme"
 			>
 		<activity
-				android:name=".activities.HomeActivity"
+				android:name=".activities.home.HomeActivity"
 				android:label="@string/app_name"
 				>
 			<intent-filter>
