--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
   compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
   compile 'com.jakewharton:butterknife:8.2.1'
   apt 'com.jakewharton:butterknife-compiler:8.2.1'
+  compile 'se.emilsjolander:intentbuilder-api:0.14.0'
+  apt 'se.emilsjolander:intentbuilder-compiler:0.14.0'
+  compile 'org.greenrobot:eventbus:3.0.0'
 }
