--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,8 @@
 		</activity>
 		<activity
 				android:name=".activities.editfolders.EditFoldersActivity"
-				android:label="@string/app_name"
+				android:label="Edit Folders"
 				>
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
 		</activity>
 	</application>
 
