--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ def getDate() {
   return formattedDate
 }
 
+repositories {
+  maven {
+    url "https://s3.amazonaws.com/repo.commonsware.com"
+  }
+}
 // variable that can be referenced to keep support libs consistent
 def supportLibVersion = '23.3.0'
 
@@ -62,4 +67,7 @@ dependencies {
   compile 'se.emilsjolander:intentbuilder-api:0.14.0'
   apt 'se.emilsjolander:intentbuilder-compiler:0.14.0'
   compile 'org.greenrobot:eventbus:3.0.0'
+  compile 'com.github.greenfrvr:hashtag-view:1.2.1'
+  compile 'com.facebook.stetho:stetho:1.3.1'
+  compile 'com.commonsware.cwac:richedit:0.5.+'
 }
