--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
   compile 'com.github.greenfrvr:hashtag-view:1.2.1'
   compile 'com.facebook.stetho:stetho:1.3.1'
   compile 'com.commonsware.cwac:richedit:0.5.+'
+  compile 'com.github.gcacace:signature-pad:1.2.0'
 }
