--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
   compile 'com.facebook.stetho:stetho:1.3.1'
   compile 'com.commonsware.cwac:richedit:0.5.+'
   compile 'com.github.gcacace:signature-pad:1.2.0'
+  compile 'com.birbit:android-priority-jobqueue:2.0.0'
 }
