--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
   compile 'com.commonsware.cwac:richedit:0.5.+'
   compile 'com.github.gcacace:signature-pad:1.2.0'
   compile 'com.birbit:android-priority-jobqueue:2.0.0'
+  compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
 }
