completed AddToFoldersActivity's model binding: read

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity
+				android:name=".activities.addtofolders.AddToFoldersActivity"
+				android:label="Edit Folders"
+				>
+		</activity>
 	</application>
 
 </manifest>
