--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest package="ir.cafebazaar.notepad"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<application
 			android:name=".App"
 			android:allowBackup="true"
@@ -9,6 +10,7 @@
 			android:supportsRtl="false"
 			android:theme="@style/AppTheme"
 			>
+
 		<activity
 				android:name=".activities.home.HomeActivity"
 				android:label="@string/app_name"
