--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest package="ir.cafebazaar.notepad"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<application
@@ -9,6 +10,7 @@
 			android:label="@string/app_name"
 			android:supportsRtl="false"
 			android:theme="@style/AppTheme"
+			tools:replace="android:supportsRtl"
 			>
 
 		<activity
