--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,32 +6,32 @@ android {
   buildToolsVersion "23.0.3"
 
   //copy the mapping files somewhere else so they are not overridden.
-  applicationVariants.all { variant ->
-    variant.outputs.each { output ->
-      if (variant.getBuildType().name == 'release') {
-        variant.assemble.doLast {
-          copy {
-            from variant.mappingFile
-            into "${rootDir}/mappings"
-            rename { String fileName -> "mapping-${variant.name}-v.${defaultConfig.versionName}-" + getDate() + ".txt"
-            }
-          }
-        }
-      }
-    }
-  }
+//  applicationVariants.all { variant ->
+//    variant.outputs.each { output ->
+//      if (variant.getBuildType().name == 'release') {
+//        variant.assemble.doLast {
+//          copy {
+//            from variant.mappingFile
+//            into "${rootDir}/mappings"
+//            rename { String fileName -> "mapping-${variant.name}-v.${defaultConfig.versionName}-" + getDate() + ".txt"
+//            }
+//          }
+//        }
+//      }
+//    }
+//  }
 
 
   defaultConfig {
     applicationId "ir.cafebazaar.notepad"
     minSdkVersion 14
     targetSdkVersion 21
-    versionCode 1
+    versionCode 2
     versionName "1.0"
   }
   buildTypes {
     release {
-      minifyEnabled false
+      minifyEnabled true
       shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
