--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
   repositories {
     jcenter()
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0'
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'com.android.tools.build:gradle:3.4.0'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -17,6 +17,7 @@ allprojects {
   repositories {
     jcenter()
     maven { url "https://www.jitpack.io" }
+    google()
   }
 }
 
